# desk-pet-agent

./: .gitignore  README.md  diag.py  package.json
.claude/skills/esp-idf-workflow/: SKILL.md
bridge/: .gitignore  Makefile  README.md  env.sh  go.mod  go.sum
bridge/cmd/claudewatch/: ble_handlers.go  main.go
bridge/cmd/claudewatch-probe/: main.go
bridge/frontend/: index.html  package-lock.json  package.json  vite.config.js
bridge/frontend/src/: App.svelte  DetailView.svelte  DeviceTab.svelte  DoctorView.svelte  LogsView.svelte  PermissionBubble.svelte  SerialTab.svelte  SessionsView.svelte  Status.svelte  app.css
bridge/install/: install.ps1  install.sh  update.ps1
bridge/internal/config/: config.go
bridge/web/: web.go
config/: settings.example.json
docs/: AGENT-LINK.md  ARCHITECTURE.md  DESIGN-SYSTEM.md  PROJECT-LAYOUT.md  SPEC-CONTROL-CENTER.md  SPEC-DESKTOP-PET.md  SPEC-NEGATIVE-SCREEN.md  SPEC-SESSION-SCREEN.md
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/main/: CMakeLists.txt  app_main.c  bsp.c  bsp.h  bt_stack.c  bt_stack.h  clawd_assets.c  clawd_assets.h  font_fs.c  font_fs.h  frame_parse.c  frame_parse.h  gesture.c  gesture.h  idf_component.yml  mock_data.c  mock_data.h  pet_states.c  pet_states.h  serial_protocol.c  serial_protocol.h  session_store.c  session_store.h  sys_info.c  sys_info.h  ui_common.c  ui_common.h  ui_connect.c  ui_connect.h  ui_control.c  ui_control.h  ui_nav.c  ui_nav.h  ui_negative.c  ui_negative.h  ui_pet.c  ui_pet.h  ui_session.c  ui_session.h  wifi_prov.c  (+1 more)
firmware/main/assets/clawd/: README.md
firmware/main/assets/clawd/c/: clawd_disconnected.h
firmware/main/assets/font/: cjk_chars.txt  cjk_font.c  cjk_font.h  noto_emoji.h
firmware/tools/: gif-resize.js  gif-to-c.js
scripts/: deploy-bridge.ps1
shared/: protocol.md
(+24 files in other folders)
