idf_component_register(
    SRCS
        "app_main.c"
        "bsp.c"
        "gesture.c"
        "pet_states.c"
        "mock_data.c"
        "sys_info.c"
        "clawd_assets.c"
        "ui_common.c"
        "ui_nav.c"
        "ui_pet.c"
        "ui_negative.c"
        "ui_session.c"
        "ui_control.c"
        "session_store.c"
        "frame_parse.c"
        "serial_protocol.c"
        "bt_stack.c"
        "wifi_prov.c"
        "ui_connect.c"
        "assets/font/noto_emoji.c"
        "assets/font/cjk_font.c"
    INCLUDE_DIRS
        "."
        "assets/clawd/c"
        "assets/font"
    REQUIRES
        json
        esp_adc
        bt
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        driver
)
